--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": ">=5.4",
         "zendframework/zendframework": "2.4.*",
+        "JamesHeinrich/getID3": "1.9.*",
         "diemuzi/mp3": "dev-master"
     }
 }
